[package]
name = "ultron-make"
authors = ["Kerem Göksu<superkerem13@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[[bin]]
name = "ultron"
path = "src/main.rs"

